Use Apache config file instead

--- a/Docker/FreshRSS.Apache.conf
+++ b/Docker/FreshRSS.Apache.conf
@@ -53,7 +53,10 @@ CustomLog "|/var/www/FreshRSS/cli/sensitive-log.sh" combined_proxy
 		OIDCXForwardedHeaders ${OIDC_X_FORWARDED_HEADERS}
 	</IfDefine>
 
+	# Can be overriden e.g. in /var/www/FreshRSS/p/i/.htaccess
 	OIDCRefreshAccessTokenBeforeExpiry 30
+	OIDCSessionInactivityTimeout 86400
+	OIDCSessionMaxDuration 2592000
 </IfDefine>
 
 <Directory />
