Use more standard filename

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "freshrss",
+  "type": "module",
   "description": "A free, self-hostable aggregator",
   "homepage": "https://freshrss.org/",
   "readmeFilename": "README.md",
