--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -58,8 +58,8 @@ jobs:
       uses: actions/setup-node@v4
       with:
         # https://nodejs.org/en/about/previous-releases
-        node-version: '20'
-        cache: 'npm'
+        node-version: lts/*
+        cache: npm
 
     - run: npm ci
 
