--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "freshrss",
+  "type": "module",
   "description": "A free, self-hostable aggregator",
   "homepage": "https://freshrss.org/",
   "readmeFilename": "README.md",
@@ -19,11 +20,11 @@
   },
   "license": "AGPL-3.0",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
   },
   "scripts": {
-    "eslint": "eslint --ext .js .",
-    "eslint_fix": "eslint --fix --ext .js .",
+    "eslint": "eslint .",
+    "eslint_fix": "eslint --fix .",
     "markdownlint": "markdownlint '**/*.md'",
     "markdownlint_fix": "markdownlint --fix '**/*.md'",
     "rtlcss": "rtlcss -d p/themes/ && find p/themes/ -type f -name '*.rtl.rtl.css' -delete",
@@ -33,15 +34,14 @@
     "fix": "npm run rtlcss && npm run stylelint_fix && npm run eslint_fix && npm run markdownlint_fix"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint": "^9.8.0",
+    "@eslint/js": "^9.8.0",
+    "globals": "^15.9.0",
     "markdownlint-cli": "^0.41.0",
+    "neostandard": "^0.11.2",
     "rtlcss": "^4.2.0",
     "sass": "^1.77.8",
-    "stylelint": "^16.6.1",
+    "stylelint": "^16.8.1",
     "stylelint-config-recommended-scss": "^14.1.0",
     "stylelint-order": "^6.0.4",
     "@stylistic/stylelint-plugin": "^3.0.0"
