--- a/lib/composer.json
+++ b/lib/composer.json
@@ -18,7 +18,7 @@
         "marienfressinaud/lib_opml": "0.5.1",
         "phpgt/cssxpath": "dev-master#d99d35f7194bac19fb3f8726b70c1bc83de3e931",
         "phpmailer/phpmailer": "6.9.1",
-        "simplepie/simplepie": "dev-freshrss#0e88412b00e47c98d8165b2f02590690d345b4e0"
+        "simplepie/simplepie": "dev-cache-hash#b722e7693229b338c31e61c9ec4b98ccbcc6c39b"
     },
     "config": {
         "sort-packages": true,
