Fix Docker documents for port mapping and caddy use.
Apache has a well known limitation when used in a docker container
that the published port must match the listening port. If this isn't
the case, content will fail to serve correctly and pages come up blank
instead.

Update the example docker compose files and example code to
identify that the PUBLISH_PORT needs to match the LISTEN port.

Add a Caddy reverse proxy example matching the Nginx one.

--- a/Docker/freshrss/example.env
+++ b/Docker/freshrss/example.env
@@ -8,6 +8,7 @@
 ADMIN_EMAIL=admin@example.net
 
 # Published port for development or local use (optional)
+# WARNING: this must match the LISTEN port as well
 PUBLISHED_PORT=8080
 
 # =========================================
