Revert line deleted by mistake

--- a/Docker/FreshRSS.Apache.conf
+++ b/Docker/FreshRSS.Apache.conf
@@ -57,6 +57,7 @@ CustomLog "|/var/www/FreshRSS/cli/sensitive-log.sh" combined_proxy
 		OIDCXForwardedHeaders ${OIDC_X_FORWARDED_HEADERS}
 	</IfDefine>
 
+    # Can be overridden e.g. in /var/www/FreshRSS/p/i/.htaccess
 	OIDCRefreshAccessTokenBeforeExpiry 30
 </IfDefine>
 
