revert Fix code indentation Fix code
For PHP 8.3:
rand] Time: 0.269 s
[mt_rand] Time: 0.143 s

For php 8.2:
[rand] Time: 0.290 s
[mt_rand] Time: 0.072 s

For PHP 8.1:
[rand] Time: 0.245 s
[mt_rand] Time: 0.123 s

```PHP
<?php
$start = microtime(true);
$sum = 0.0;
for ($i = 0; $i < 1000000; $i++) {
    $sum += rand(0, 32767);
}
printf('[rand] Time: %.3f s%s', microtime(true) - $start, PHP_EOL);

$start = microtime(true);
$sum = 0.0;
for ($i = 0; $i < 1000000; $i++) {
    $sum += mt_rand(0, 32767);
}
printf('[mt_rand] Time: %.3f s%s', microtime(true) - $start, PHP_EOL);

printf('[random_int] Time: %.3f s%s', microtime(true) - $start, PHP_EOL);
```
Upgrade code to php 8.1

--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,8 @@
         "phpstan/phpstan-phpunit": "^1.4",
         "phpstan/phpstan-strict-rules": "^1.6",
         "phpunit/phpunit": "^10",
-        "squizlabs/php_codesniffer": "^3.9"
+        "squizlabs/php_codesniffer": "^3.9",
+        "rector/rector": "^1.2"
     },
     "scripts": {
         "php-lint": "find . -type d -name 'vendor' -prune -o -name '*.php' -print0 | xargs -0 -n1 -P4 php -l 1>/dev/null",
