--- a/phpstan.neon
+++ b/phpstan.neon
@@ -38,7 +38,7 @@ parameters:
 	treatPhpDocTypesAsCertain: false
 	strictRules:
 		allRules: false
-		booleansInConditions: false	# TODO pass
+		booleansInConditions: true
 		closureUsesThis: true
 		disallowedConstructs: false
 		disallowedLooseComparison: false
@@ -58,9 +58,8 @@ parameters:
 		checkedExceptionClasses:
 			- 'Minz_Exception'
 	ignoreErrors:
-		# - '#Only booleans are allowed in (a negated boolean|a ternary operator condition|an elseif condition|an if condition|&&|\|\|), (bool|false|int(<[0-9, max]+>)?|true|null|\|)+ given.*#'
+		- '#Only booleans are allowed in (a negated boolean|a ternary operator condition|an elseif condition|an if condition|&&|\|\|), (bool|false|int(<[0-9, max]+>)?|true|null|\|)+ given.*#'
 includes:
 	- vendor/phpstan/phpstan-phpunit/extension.neon
 	- vendor/phpstan/phpstan-phpunit/rules.neon
 	- vendor/phpstan/phpstan-strict-rules/rules.neon
-	# - vendor/phpstan/phpstan/conf/bleedingEdge.neon
