--- a/lib/composer.json
+++ b/lib/composer.json
@@ -18,7 +18,7 @@
         "marienfressinaud/lib_opml": "0.5.1",
         "phpgt/cssxpath": "dev-master#45f3ac151fc21d459e2515c3aff97cd4bf877bf8",
         "phpmailer/phpmailer": "6.9.1",
-        "simplepie/simplepie": "dev-freshrss#1cabd55aee050a0a665685d8ec700f1edd5c5160"
+        "simplepie/simplepie": "dev-negociate_cache_expiration_time#af830e1fa55a15fc00b88371f4278da8a916a334"
     },
     "config": {
         "sort-packages": true,
