--- a/.typos.toml
+++ b/.typos.toml
@@ -38,6 +38,7 @@ extend-exclude = [
 	"app/i18n/zh-tw/",
 	"bin/",
 	"CHANGELOG-old.md",
+	"composer.json",
 	"composer.lock",
 	"data/",
 	"docs/fr/",
