Also for devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.20
 
-ENV TZ UTC
+ENV TZ=UTC
 SHELL ["/bin/ash", "-eo", "pipefail", "-c"]
 
 RUN apk add --no-cache \
@@ -23,12 +23,12 @@ RUN rm -f /etc/apache2/conf.d/languages.conf /etc/apache2/conf.d/info.conf \
 RUN adduser --ingroup www-data --disabled-password developer && \
 	echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer
 
-ENV COPY_LOG_TO_SYSLOG On
-ENV COPY_SYSLOG_TO_STDERR On
-ENV CRON_MIN ''
-ENV DATA_PATH ''
-ENV FRESHRSS_ENV 'development'
-ENV LISTEN '0.0.0.0:8080'
-ENV TRUSTED_PROXY 0
+ENV COPY_LOG_TO_SYSLOG=On
+ENV COPY_SYSLOG_TO_STDERR=On
+ENV CRON_MIN=''
+ENV DATA_PATH=''
+ENV FRESHRSS_ENV='development'
+ENV LISTEN='0.0.0.0:8080'
+ENV TRUSTED_PROXY=0
 
 EXPOSE 8080
