--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
+/.htaccess
 /bin/
+/constants.local.php
+/data.back/
 /extensions/node_modules/
 /extensions/vendor/
 /node_modules/
 /vendor/
-/data.back/
-/constants.local.php
 
 .vscode/
 
