--- a/.htaccess.dist
+++ b/.htaccess.dist
@@ -1,4 +1,5 @@
 # Copy this file to `.htaccess` for additional root-level protection
+# if you cannot set Apache `DocumentRoot` to `./p/` as recommended.
 
 # Deny files starting with a dot, or without extension, or not in a whitelist of extensions
 <FilesMatch "^\.|^[^.]+$|\.(?!css|gif|html|ico|js|php|png|svg|txt|woff|woff2)[^.]*$">
