--- a/p/.htaccess
+++ b/p/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_authz_core.c>
-	# Deny files starting with a dot, or without extension, or not in a whitelist of extensions
-	<FilesMatch "^\.|^[^.]+$|\.(?!css|gif|html|ico|js|php|png|svg|txt|woff|woff2)[^.]*$">
+	# Deny files starting with a dot, or without extension (except some), or not in a whitelist of extensions
+	<FilesMatch "^\.|^(?!oidc)[^.]+$|\.(?!css|gif|html|ico|js|php|png|svg|txt|woff|woff2)[^.]*$">
 		Require all denied
 	</FilesMatch>
 </IfModule>
